tests/expectations/compiler/integers/u32/hex_min_fail.out
Error [ETYC0372008]: The value -0x1 is not a valid `u32`
    --> compiler-test:4:22
     |
   4 |         let a: u32 = -0x1u32;
     |                      ^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
